ECA-10418:addressed review comments